# check-annual-strategy-profit

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: local_config.example.json  op_test_wallets.example.txt  polymarket_wallets.example.txt
docs/: PLAN_C_IMPLEMENTATION.md
src/: charts.py  config_loader.py  constants.py  fetch_unsettled_by_market.py  fetch_unsettled_markets.py  history.py  periodic_report_runner.py  poly_realized_pnl.py  polymarket_api.py  query_poly_positions.py  report_pipeline.py  reporting.py  telegram_command_bot.py  telegram_push.py  update_time_tz.py  utils.py  wallets.py
systemd/: polymarket-periodic-report.service  polymarket-periodic-report.timer  telegram-command-bot.service
